nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-nginx
  namespace: nginx
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.example.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - path: /simple
        pathType: Prefix
        backend:
          service:
            name: simple-web-svc
            port:
              number: 80
